--- a/app/admin.html
+++ b/app/admin.html
@@ -28,7 +28,7 @@
         <div id="chart"></div>
     </section>
     <section class="wrap orderPage-list">
-        <a href="#" class="discardAllBtn">清除全部訂單</a>
+        <a href="#" class="discardAllBtn js-delAll">清除全部訂單</a>
         <div class="orderTableWrap">
             <table class="orderPage-table">
                 <thead>
@@ -83,24 +83,7 @@ function menuToggle() {
 function closeMenu() {
     menu.classList.remove('openMenu');
 }
-let chart = c3.generate({
-    bindto: '#chart', // HTML 元素綁定
-    data: {
-        type: "pie",
-        columns: [
-        ['Louvre 雙人床架', 1],
-        ['Antony 雙人床架', 2],
-        ['Anty 雙人床架', 3],
-        ['其他', 4],
-        ],
-        colors:{
-            "Louvre 雙人床架":"#DACBFF",
-            "Antony 雙人床架":"#9D7FEA",
-            "Anty 雙人床架": "#5434A7",
-            "其他": "#301E5F",
-        }
-    },
-});
+
 </script>
 
 
